--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "dependencies": {
-    "underscore": "1.8.3"
-  },
+  
   "name": "Prueba",
   "version": "0.0.0",
   "description": "prueba de nodejs",
   "main": "index.js",
-  "devDependencies": {},
+  "dependencies": {
+    "underscore": "1.8.3",
+    "mongodb": "~2.0.0",
+    "mocha": "2.4.5"
+  },
+  "devDependencies": {
+    "gulp": "3.9.1",
+    "gulp-mocha": "2.2.0",
+    "mocha": "2.4.5"
+  },
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "watch": "gulp watch"
   },
   "keywords": [
     "nodejs",
     "mongodb"
   ],
   "author": "Ariel Alvarado",
-  "license": "ISC"
+  "license": "Apache 2.0"
 }
